--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,19 +43,19 @@ body{
     padding: 30px 0px;
 }
 .modal {
-    display: none; 
-    position: fixed; 
+    display: block;
+    position: fixed;
     z-index: 1;
     padding-top: 30px;
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%; 
+    height: 100%;
     overflow: auto;
-    background-color: rgb(0,0,0); 
+    background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
   }
-  
+
   .modal-content {
     background-color: #fefefe;
     margin: auto;
@@ -75,7 +75,7 @@ body{
     font-size: 28px;
     font-weight: bold;
   }
-  
+
   .close:hover,
   .close:focus {
     color: #000;
@@ -96,7 +96,7 @@ body{
   }
   .options{
     padding: 20px;
-    
+
   }
   .hide{
       display: none;
@@ -114,7 +114,7 @@ body{
       float: right;
       width: 100px;
   }
- 
+
 
 /* End my New Part/*
 
@@ -158,7 +158,7 @@ body{
 
 /*
 ======================================
-  * CSS TABLE CONTENT *  
+  * CSS TABLE CONTENT *
 ======================================
 1. HEADER
 2. HEADER TOPBAR
@@ -174,7 +174,7 @@ body{
 12. FOOTER
 13. INNER CONTENT CSS
 ======================================
-  * END TABLE CONTENT *  
+  * END TABLE CONTENT *
 ======================================
 */
 
@@ -370,7 +370,7 @@ body{
 	margin-left:10px;
 }
 .topbar-left ul li i{
-	margin-right:5px;	
+	margin-right:5px;
 }
 .search-btn:after,
 .topbar-left ul li:after,
@@ -482,7 +482,7 @@ body{
     max-height: 60px;
 	width: auto;
 	max-width: 140px;
-	
+
 }
 .menu-logo span{
     font-size: 20px;
@@ -889,7 +889,7 @@ body{
 		text-align: center;
 		width: 100%;
 		padding: 10px 0;
-		background: #fff;	
+		background: #fff;
 	}
 	.menu-links .nav-social-link a{
 		color:#000;
@@ -1209,14 +1209,14 @@ body{
 }
 .header-transparent .header-lang-bx .btn{
 	background-color: transparent !important;
-	color:#fff;	
-} 
-.header-transparent .topbar-right .header-lang-bx ul li a{
-	color:#000;	
+	color:#fff;
 }
-.header-transparent .topbar-left ul li a, 
+.header-transparent .topbar-right .header-lang-bx ul li a{
+	color:#000;
+}
+.header-transparent .topbar-left ul li a,
 .header-transparent .topbar-right ul li a{
-	color:#fff;	
+	color:#fff;
 }
 @media only screen and (max-width: 991px) {
 	.header-transparent .menu-links .nav > li > a{
@@ -1366,7 +1366,7 @@ body{
 	color: #707070;
 	font-weight: 500;
 	font-size: 14px;
-	
+
 }
 .ttr-post-meta ul li strong{
 	font-weight: 500;
@@ -1416,11 +1416,11 @@ body{
 .blog-md .ttr-post-info .post-title{
 	margin-top:0;
 }
-.blog-md, 
+.blog-md,
 .blog-md .ttr-post-info {
     overflow: hidden;
 }
-.blog-md .ttr-post-info, 
+.blog-md .ttr-post-info,
 .blog-md .ttr-post-media {
     display: table-cell;
     vertical-align: middle;
@@ -1469,7 +1469,7 @@ body{
 }
 .share-btn ul:hover li.share-button a.btn{
 	background:#A0A0A0;
-}	
+}
 .share-btn ul:hover li{
 	margin-left: 4px;
 }
@@ -1793,7 +1793,7 @@ ol.comment-list li.comment .comment-respond .comment-form p {
 	font-weight:700;
 }
 .counter-style-1 .counter-text{
-	font-size:16px;	
+	font-size:16px;
 	font-weight: 500;
 }
 .counter-style-1 .icon{
@@ -1854,21 +1854,21 @@ footer .widget_recent_entries ul li a,
 footer .widget_services ul li a {
     color: #b0b0b0;
 }
-footer.text-white .widget_categories ul li a, 
-footer.text-white .widget_archive ul li a, 
-footer.text-white .widget_meta ul li a, 
-footer.text-white .widget_pages ul li a, 
-footer.text-white .widget_recent_comments ul li a, 
-footer.text-white .widget_nav_menu li a, 
-footer.text-white .widget_recent_entries ul li a, 
-footer.text-white .widget_services ul li a, 
-footer.text-white a, 
-footer.text-white .footer-bottom, 
-footer.text-white p, 
-footer.text-white strong, 
-footer.text-white b, 
-footer.text-white .widget .post-title, 
-footer.text-white .widget-about .ttr-title, 
+footer.text-white .widget_categories ul li a,
+footer.text-white .widget_archive ul li a,
+footer.text-white .widget_meta ul li a,
+footer.text-white .widget_pages ul li a,
+footer.text-white .widget_recent_comments ul li a,
+footer.text-white .widget_nav_menu li a,
+footer.text-white .widget_recent_entries ul li a,
+footer.text-white .widget_services ul li a,
+footer.text-white a,
+footer.text-white .footer-bottom,
+footer.text-white p,
+footer.text-white strong,
+footer.text-white b,
+footer.text-white .widget .post-title,
+footer.text-white .widget-about .ttr-title,
 footer.text-white {
     color: #fff;
 }
@@ -2100,7 +2100,7 @@ button.back-to-top {
 	line-height: 34px;
 }
 .recent-news .info-bx{
-	padding: 20px;	
+	padding: 20px;
     border: 1px solid #EEEEEE;
 }
 .comments-bx{
@@ -2683,7 +2683,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#391800', end
 .portfolio-bx:hover .portfolio-info-bx{
 	bottom: 0;
 }
-.portfolio-bx:hover .media-ov2:before, 
+.portfolio-bx:hover .media-ov2:before,
 .portfolio-bx:hover .media-ov2:after{
 	opacity:0.7;
 }
@@ -2781,7 +2781,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#391800', end
 }
 .course-info-list ul{
 	list-style:none;
-	margin:0;	
+	margin:0;
 	padding: 0;
 }
 .course-info-list ul li{
@@ -3024,13 +3024,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#391800', end
 	border-radius:100px;
 	border: 5px solid #fff;
 	box-shadow:0 0 15px 0 rgba(0,0,0,0.2);
-	margin:25px auto 15px; 
+	margin:25px auto 15px;
 }
 .profile-info{
 	margin-bottom:15px;
 }
 .profile-info h4{
-	font-size:18px;	
+	font-size:18px;
 	margin-bottom: 0;
 }
 .profile-info span{
@@ -3055,13 +3055,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#391800', end
 .profile-content-bx{
 	border: 1px solid #e9e9e9;
 }
-.profile-tabnav{ 
+.profile-tabnav{
 	margin:20px 0;
 }
-.profile-tabnav .nav{ 
+.profile-tabnav .nav{
 	border:0;
 }
-.profile-tabnav .nav li{  
+.profile-tabnav .nav li{
 	display:block;
 	width:100%;
 }
@@ -3172,7 +3172,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#391800', end
 .account-container {
     max-width: 400px;
 	margin: auto;
-	padding: 30px 0;	
+	padding: 30px 0;
 }
 .custom-control-label:before{
 	width: 20px;
@@ -3216,39 +3216,39 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#391800', end
   transform-origin: left top;
 } */
 /* Google Recaptcha */
- 
+
 .g-recaptcha,
 #rc-imageselect {
     transform:scale(0.99);
     -webkit-transform:scale(0.99);
     -moz-transform:scale(0.99);
     -o-transform:scale(0.99);
-    
+
     transform-origin:0 0;
     -o-transform-origin:0 0;
     -moz-transform-origin:0 0;
     -webkit-transform-origin:0 0;
 }
 @media screen and (max-width: 575px){
-	#rc-imageselect, 
+	#rc-imageselect,
 	.g-recaptcha {
         transform:scale(0.77);
         -moz-transform:scale(0.77);
         -o-transform:scale(0.77);
         -webkit-transform:scale(0.77);
-        
+
         transform-origin:0 0;
         -moz-transform-origin:0 0;
         -o-transform-origin:0 0;
         -webkit-transform-origin:0 0;
-    
+
     }
 }
 .recaptcha-box{
  height:60px;
 }
 .g-recaptcha > div{
-	width:250px !important; 
+	width:250px !important;
 }
 /* Google Recaptcha */
 /* error */
@@ -3321,7 +3321,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#391800', end
 	.event-info .event-title{
 		 font-size: 20px;
 	}
-	.upcoming-event-carousel.owl-btn-1 .owl-prev, 
+	.upcoming-event-carousel.owl-btn-1 .owl-prev,
 	.upcoming-event-carousel.owl-btn-1 .owl-next{
 		margin: 0 50px !important;
 	}
@@ -3382,7 +3382,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#391800', end
 		padding-top: 50px;
 		padding-bottom: 50px;
 	}
-	.upcoming-event-carousel.owl-btn-1 .owl-prev, 
+	.upcoming-event-carousel.owl-btn-1 .owl-prev,
 	.upcoming-event-carousel.owl-btn-1 .owl-next{
 		margin: 0 0 !important;
 	}
@@ -3400,7 +3400,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#391800', end
 	.info-bx{
 		font-size: 16px;
 	}
-	.upcoming-event-carousel.owl-btn-1 .owl-prev, 
+	.upcoming-event-carousel.owl-btn-1 .owl-prev,
 	.upcoming-event-carousel.owl-btn-1 .owl-next{
 		width: 40px;
 		height: 40px;
@@ -3461,7 +3461,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#391800', end
 		padding-bottom: 10px;
 		margin-bottom: 15px;
 	}
-	footer p, 
+	footer p,
 	footer li{
 		font-size: 13px;
 	}
