--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,5 @@
 /*My New part*/
 
-
 body{
     background-color: rgba(215, 238, 248, 0.301);
 }
@@ -50,18 +49,22 @@ body{
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
-    overflow: auto;
+    max-height: calc(100vh - 0px);
+    overflow-y: auto;
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
+
   }
+
+
 
   .modal-content {
     background-color: #fefefe;
     margin: auto;
     border-radius: 5px;
     width: 80%;
-    height: 600px;
+    height: auto;
+
   }
   .header{
     padding: 20px;
