--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,9 +42,8 @@ body{
     padding: 30px 0px;
 }
 .modal {
-    display: block;
-    position: fixed;
-    z-index: 1;
+    /* position: fixed; */
+    /* z-index: 1; */
     padding-top: 30px;
     left: 0;
     top: 0;
